-Hoofdstuk 3 aangevuld -Tabellen in de bijlage toegevoegd

--- a/bachproef-tin.tex
+++ b/bachproef-tin.tex
@@ -7,7 +7,8 @@
 
 \usepackage{hogent-thesis-titlepage} % Titelpagina conform aan HOGENT huisstijl
 \usepackage{graphicx} 
-
+\usepackage{tabularx}
+\usepackage{lscape}
 %%---------- Documenteigenschappen ---------------------------------------------
 % TODO: Vul dit aan met je eigen info:
 
@@ -76,6 +77,7 @@
 % de figuur of tabel zelf.
 
 \listoffigures
+\listoftables
 
 % Als je een lijst van afkortingen of termen wil toevoegen, dan hoort die
 % hier thuis. Gebruik bijvoorbeeld de ``glossaries'' package.
