--- a/bijlagen.tex
+++ b/bijlagen.tex
@@ -5,3 +5,9 @@ Check output bij exception van de XCF\_CF\_STR\_POLICIYSIZE check.
 
 \input{checkOutput}
 
+\section{Tabellen Standaard opstelling z/OS Health Checker}
+\label{sec/Tabellen Standaard opstelling z/OS Health Checker}
+
+Dit zijn de tabellen van alle checks gegroepeerd per team dat beheer heeft over de checks.
+
+\input{tabellen}
