--- a/samenvatting.tex
+++ b/samenvatting.tex
@@ -36,4 +36,4 @@
 % De samenvatting in de hoofdtaal van het document
 
 \chapter*{\IfLanguageName{dutch}{Samenvatting}{Abstract}}
-De mainframe is een vitaal onderdeel van verscheidene belangrijke sectoren. Ze worden voornamelijk gebruikt door hun garantie van continue toegankelijkheid. Er is zowel software als hardware speciaal ontworpen voor dit doeleind. z/OS Health checker is een voorbeeld van software dat hiervoor gebruikt wordt. Dit is een preventie tool die problemen probeert op te sporen voordat ze gebeuren. Maar de logging hiervan is niet zo efficiënt en de standaardopstelling van deze tool is ook niet efficiënt voor elke opstelling van en mainframe. Dit is ook het geval bij de opstelling HCL Technologies BVBA het doel van deze proef is die opstelling optimaliseren en een veel efficiëntere manier van logging opstellen. Er wordt eerst gekeken naar structuur binnen de mainframe waar z/OS health checker opereert. Dan naar de opstelling van z/OS Health Checker zelf en een analyse van die opstelling binnen HCL Technologies BVBA. Dan zal er een efficiëntere logging opgezet worden via JCL - jobs met als vervolg een optie deze om te zetten naar een Web interface.
+De mainframe is een vitaal onderdeel van verscheidene belangrijke sectoren. Ze worden voornamelijk gebruikt door hun garantie van continue beschikbaarheid. Er is zowel software als hardware speciaal ontworpen voor dit doeleinde. z/OS Health checker is een voorbeeld van software dat hiervoor gebruikt wordt. Dit is een preventie tool die problemen probeert op te sporen voordat ze gebeuren. Maar de logging hiervan is niet zo efficiënt en de standaardopstelling van deze tool is ook niet efficiënt voor elke opstelling van een mainframe. Dit is ook het geval bij de opstelling HCL Technologies BVBA. Het doel van deze proef is de setup te optimaliseren en een veel efficiëntere manier van logging te bereiken. Er wordt eerst gekeken naar structuur binnen de mainframe waar z/OS health checker opereert. Dan naar de setup van z/OS Health Checker zelf en een analyse van die opstelling binnen HCL Technologies BVBA. Dan zal er een efficiëntere logging opgezet worden via JCL - jobs met als optie deze om te zetten naar een Web interface en hoe dit zou gebeuren.
