Alle bijlagen zijn toegevoegd

--- a/bachproef-tin.tex
+++ b/bachproef-tin.tex
@@ -9,6 +9,7 @@
 \usepackage{graphicx} 
 \usepackage{tabularx}
 \usepackage{lscape}
+\usepackage{verbatim}
 %%---------- Documenteigenschappen ---------------------------------------------
 % TODO: Vul dit aan met je eigen info:
 
