--- a/bijlagen.tex
+++ b/bijlagen.tex
@@ -3,11 +3,41 @@
 
 Check output bij exception van de XCF\_CF\_STR\_POLICIYSIZE check.
 
-\input{checkOutput}
+\verbatiminput{checkOutput/output.txt}
 
 \section{Tabellen Standaard opstelling z/OS Health Checker}
-\label{sec/Tabellen Standaard opstelling z/OS Health Checker}
+\label{sec:Tabellen Standaard opstelling z/OS Health Checker}
 
 Dit zijn de tabellen van alle checks gegroepeerd per team dat beheer heeft over de checks.
 
 \input{tabellen}
+
+\section{Parmlib members voor z/OS Health Checker}
+\label{sec:Parmlin members voor z/OS Health Checker}
+
+\input{parmlibMembers}
+
+\section{JCL jobs}
+\label{sec:JCL jobs}
+
+Dit zijn de JCL jobs die gebruikt worden voor het opstellen van de log die daarna doorgestuurd word via mail.
+
+\subsection{FHZSVT11}
+\label{subsec:FHZSVT11}
+
+\verbatiminput{JCL/FHZSVT11.txt}
+
+\subsection{FHZSVT21}
+\label{subsec:FHZSVT21}
+
+\verbatiminput{JCL/FHZSVT21.txt}
+
+\subsection{FHZSVT31}
+\label{subsec:FHZSVT31}
+
+\verbatiminput{JCL/FHZSVT31.txt}
+
+\subsection{FHZSVT41}
+\label{subsec:FHZSVT41}
+
+\verbatiminput{JCL/FHZSVT41.txt}
